[package]
name = "rasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ariadne = "0.2.0"
chumsky = "1.0.0-alpha.3"
logos = "0.12.1"
resurgence = { git = "https://github.com/Resurgence-VM-Development/Resurgence" }
